--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,20 +1,8 @@
-FROM python:3.9-slim as builder
-
-WORKDIR /app
-COPY server/requirements.txt .
-
-RUN apt-get update && apt-get install -y \
-    gcc \
-    python3-dev \
-    && pip install --user -r requirements.txt
-
 FROM python:3.9-slim
 
 WORKDIR /app
-COPY --from=builder /root/.local /root/.local
-COPY server/ .
 
-# Install runtime dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     iptables \
     iproute2 \
@@ -24,11 +12,17 @@ RUN apt-get update && apt-get install -y \
     procps \
     && rm -rf /var/lib/apt/lists/*
 
-# Set up entrypoint
+# Copy entire server directory
+COPY server/ .
+
+# Install Python dependencies
+RUN pip install -r requirements.txt
+
+# Make sure Python can find our modules
+ENV PYTHONPATH=/app
+
+# Entrypoint
 COPY server/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
-
-ENV PATH=/root/.local/bin:$PATH
-ENV PYTHONPATH=/app
 
 ENTRYPOINT ["/entrypoint.sh"]
