--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,8 +2,11 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies including build tools
 RUN apt-get update && apt-get install -y \
+    gcc \
+    python3-dev \
+    libxtables-dev \
     iptables \
     iproute2 \
     wireguard-tools \
@@ -12,11 +15,12 @@ RUN apt-get update && apt-get install -y \
     procps \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy entire server directory
-COPY server/ .
+# Copy requirements first to leverage Docker cache
+COPY server/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Install Python dependencies
-RUN pip install -r requirements.txt
+# Copy the rest of the application
+COPY server/ .
 
 # Make sure Python can find our modules
 ENV PYTHONPATH=/app
